<resources>
    <string name="app_name">DevMe</string>
    <string name="action_settings">Settings</string>
    <string name="devme">Dev Me</string>
    <string name="login">Login</string>
    <string name="newuser">New here? Sign up.</string>
    <string name="next">Next</string>
    <string name="remember">Remember Me</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="phoneDisclaimer">We will only use your phone number when verifiying your registration.</string>
    <string name="phone">Phone Number</string>
    <string name="checkboxterms">By checking this box, you agree to our Terms and Conditions</string>
    <string name="new_idea">New Idea</string>
    <string name="ideas_fail">Error Loading Ideas</string>
    <string name="title">Title:</string>
    <string name="web_application">Web Application</string>
    <string name="mobile_application">Mobile Application</string>
    <string name="desktop_application">Desktop Application</string>
    <string name="description">Description: </string>
    <string name="casual_with_explanation">Casual (Share your idea and let the devs take it from there!)</string>
    <string name="completeregistration">Complete Registration</string>
    <string name="verificationdescription1">You should receive a 4-digit verification code via text.</string>
    <string name="verificationinstruction">Enter the 4-digit verification code here:</string>
    <string name="done">Done</string>
    <string name="resendverification">Didn\'t receive a text?</string>
    <string name="resend">Resend Code</string>
    <string name="create">Create</string>
    <string name="howManyDevs">How many developers would you like working on your application?</string>
    <string name="ip">Intellectual Property Agreement</string>
    <string name="accept">Accept</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="plus">New Idea</string>
    <string name="ip_disclosure">By choosing this option, you are releasing your intellectual property rights to this idea.</string>
    <string name="dummy_apply">Dummy Apply</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="dummy_tech">Dummy Tech</string>
    <string name="dummy_user">Dummer Username</string>
    <string name="dummy_description">Dummy Description</string>
    <string name="plus">+</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="send">Send</string>
    <string name="compose">Send Message</string>
    <string name="yourusername">Your Username:</string>
    <string name="loading">Loading...</string>
</resources>
