<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_apply"
        android:id="@+id/buttonApplyAccept"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dummy_title"
        android:id="@+id/textFullTitle"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dummy_tech"
        android:id="@+id/textFullTech"
        android:layout_gravity="center_horizontal"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dummy_user"
        android:id="@+id/textFullUsername"
        android:layout_gravity="center_horizontal"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dummy_description"
        android:id="@+id/textFullDescription"
        android:layout_gravity="center_horizontal"
        android:paddingTop="40dp" />
</LinearLayout>