<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#b90d1419"
    android:theme="@style/Base.Theme.AppCompat.Light.Dialog">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:id="@+id/textViewFirstName"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstName"
                android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:id="@+id/textViewLastName"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastName"
                android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:id="@+id/textViewUsername"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textViewEmail"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailAddress"
                android:layout_gravity="center_horizontal"
                android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/textViewPassword"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"
                android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmpassword"
                android:id="@+id/textViewConfirmPassword"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirmPassword"
                android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:id="@+id/textViewPhoneNumber"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/phoneNumber"
                android:layout_gravity="center_horizontal"
                android:inputType="phone"
                android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/phoneDisclaimer"
                android:id="@+id/textView2"
                android:textColor="#969696" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxterms"
                android:id="@+id/checkBoxTerms"
                android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerResultText"
                android:layout_gravity="center_horizontal"
                android:textColor="#c4e78e" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/next"
                android:layout_gravity="center_horizontal|right"
                android:onClick="onNextClick" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
