<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textTitleLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editIdeaTitle"
        android:padding="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editIdeaTitle"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textTitleLabel"
        android:layout_toEndOf="@+id/textTitleLabel" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_application"
        android:id="@+id/checkWebApp"
        android:layout_below="@+id/textTitleLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_application"
        android:id="@+id/checkMobileApp"
        android:layout_below="@+id/checkWebApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desktop_application"
        android:id="@+id/checkDesktopApp"
        android:layout_below="@+id/checkMobileApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description"
        android:id="@+id/textDescriptionLabel"
        android:layout_below="@+id/checkDesktopApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editIdeaDescription"
        android:layout_below="@+id/checkDesktopApp"
        android:layout_toRightOf="@+id/textDescriptionLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/casual_with_explanation"
        android:id="@+id/checkCasual"
        android:layout_below="@+id/editIdeaDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:padding="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/buttonSaveNewIdea"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:onClick="onCreateClick"
        android:nestedScrollingEnabled="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1 Developer"
        android:id="@+id/checkOneDev"
        android:checked="false"
        android:layout_below="@+id/textHowManyDevs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2 Developers"
        android:id="@+id/checkTwoDev"
        android:layout_below="@+id/checkOneDev"
        android:layout_alignLeft="@+id/checkOneDev"
        android:layout_alignStart="@+id/checkOneDev"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3 Developers"
        android:id="@+id/checkThreeDev"
        android:layout_below="@+id/checkTwoDev"
        android:layout_alignLeft="@+id/checkTwoDev"
        android:layout_alignStart="@+id/checkTwoDev"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4 Developers"
        android:id="@+id/checkFourDev"
        android:layout_below="@+id/checkThreeDev"
        android:layout_alignLeft="@+id/checkThreeDev"
        android:layout_alignStart="@+id/checkThreeDev"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howManyDevs"
        android:id="@+id/textHowManyDevs"
        android:layout_below="@+id/checkCasual"
        android:layout_alignLeft="@+id/checkCasual"
        android:layout_alignStart="@+id/checkCasual"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCreateResult"
        android:layout_below="@+id/checkFourDev"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editIdeaTitle"
        android:layout_alignRight="@+id/checkFourDev"
        android:layout_alignEnd="@+id/checkFourDev"
        android:layout_alignParentBottom="true" />

</RelativeLayout>