<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/devme"
        android:layout_weight="2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/usernameText"
        android:layout_gravity="center_horizontal"
        android:password="false"
        android:layout_marginTop="200dp"
        android:hint="username"
        android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_gravity="center_horizontal"
        android:password="false"
        android:hint="password"
        android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:id="@+id/rememberMe"
        android:layout_gravity="center_horizontal"
        android:onClick="rememberMeClick"
        android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal"
        android:textColor="#c4e78e"
        android:textSize="15sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="LoginClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        android:id="@+id/signUp"
        android:layout_gravity="center_horizontal"
        android:onClick="createAccountClick" />
</LinearLayout>
